--- a/src/frontend/src/app/home-page/popups/profil/profil.component.css
+++ b/src/frontend/src/app/home-page/popups/profil/profil.component.css
@@ -4,9 +4,11 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 30%;
+  height: 100%;
   color: white;
   font-size: 20px;
+
+  background-color: blue;
 }
 
 /* Header */
@@ -15,12 +17,13 @@
   flex-direction: row;
   justify-content: space-between;
   width: 90%;
-  height: auto;
+  height: 180px;
   border-radius: 1em;
   background-color: #1A202C;
-
   padding: 20px;
   margin: 10px;
+
+  background-color: green;
 }
 
 .profil-header-box {
@@ -31,7 +34,7 @@
   font-size: large;
   font-weight: 700;
 
-  width: 20%;
+  width: 30%;
   margin-right: 20px;
   margin-left: 20px;
 }
@@ -51,13 +54,15 @@
 }
 
 /* Separator */
-.profil-history {
+.profil-counter {
   width: 100%;
-  height: 70%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  background-color: yellow;
 }
 
 .profil-win-counter {
@@ -81,6 +86,12 @@
   margin-left: 10px;
   font-weight: bolder;
   font-size: 24px;
+}
+
+.profil-history {
+  width: 100%;
+  height: 100%;
+  background-color: orange;
 }
 
 .profil-history-title {
